# budget_app

./: README.md
backend/: README.md  pyproject.toml
backend/src/: __init__.py  __main__.py  db.py  main.py  schema.sql
backend/src/budgets/: budget_routes.py
backend/src/spends/: spend_routes.py
backend/tests/: conftest.py  test_budget_routes.py  test_spend_routes.py
frontend/: jest.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/__test__/: App.test.tsx
frontend/src/components/: types.ts
frontend/src/components/AddMoreInput/: AddCategory.css  AddCategory.tsx  AddMoreInput.css  AddMoreInput.tsx
frontend/src/components/CategoryItem/: CategoryItem.css  CategoryItem.tsx
frontend/src/components/CategoryTable/: CategoryTable.css  CategoryTable.test.tsx  CategoryTable.tsx
frontend/src/components/DateFilter/: DateFilter.css  DateFilter.tsx
frontend/src/components/QuestionWidget/: QuestionWidget.css  QuestionWidget.tsx
frontend/src/context/: BudgetProvider.tsx  SpendProvider.tsx
frontend/src/hooks/: useBudgetContext.ts  useHandleDelete.ts  useSpendContext.ts
frontend/src/pages/: BudgetOverviewPage.tsx
frontend/src/pages/BudgetOverviewPage/: BudgetOverviewPage.test.tsx  BudgetOverviewPage.tsx
frontend/src/pages/SpendOverViewPage/: SpendOverviewPage.tsx
frontend/src/services/: budgetApiService.ts  spendApiService.ts
