[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Sidra Iqbal <114309741+siqbal181@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pytest = "^8.2.1"
pylint = "^3.2.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
